--- a/BestStoreMVC/Areas/Identity/Pages/Account/Register.cshtml
+++ b/BestStoreMVC/Areas/Identity/Pages/Account/Register.cshtml
@@ -5,7 +5,8 @@
 }
 
 <div class="row">
-    <div class="col mx-auto rounded border p-3">
+    <div class="col-lg-6 mx-auto rounded border p-3">
+
         <h2 class="text-center mb-3">Register</</h2>
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
@@ -13,18 +14,51 @@
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
 
             <div class="row mb-3">
+                <label class="col-sm-4 col-form-label">First Name</label>
+                <div class="col-sm-8">
+                    <input class="form-control" asp-for="Input.FirstName" />
+                    <span asp-validation-for="Input.FirstName" class="text-danger"></span>
+                </div>
+            </div>
+
+            <div class="row mb-3">
+                <label class="col-sm-4 col-form-label">Last Name</label>
+                <div class="col-sm-8">
+                    <input class="form-control" asp-for="Input.LastName" />
+                    <span asp-validation-for="Input.LastName" class="text-danger"></span>
+                </div>
+            </div>
+
+            <div class="row mb-3">
                 <label class="col-sm-4 col-form-label">Email</label>
                 <div class="col-sm-8">
                     <input class="form-control" asp-for="Input.Email" />
-                    <span asp-validation-from="Input.Email" class="text-danger"></span>
+                    <span asp-validation-for="Input.Email" class="text-danger"></span>
                 </div>
             </div>
+
+            <div class="row mb-3">
+                <label class="col-sm-4 col-form-label">Phone Number</label>
+                <div class="col-sm-8">
+                    <input class="form-control" asp-for="Input.PhoneNumber" />
+                    <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+                </div>
+            </div>
+
+            <div class="row mb-3">
+                <label class="col-sm-4 col-form-label">Address</label>
+                <div class="col-sm-8">
+                    <input class="form-control" asp-for="Input.Address" />
+                    <span asp-validation-for="Input.Address" class="text-danger"></span>
+                </div>
+            </div>
+
 
             <div class="row mb-3">
                 <label class="col-sm-4 col-form-label">Password</label>
                 <div class="col-sm-8">
                     <input class="form-control" asp-for="Input.Password" />
-                    <span asp-validation-from="Input.Password" class="text-danger"></span>
+                    <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
             </div>
 
@@ -32,7 +66,7 @@
                 <label class="col-sm-4 col-form-label">Confirm Password</label>
                 <div class="col-sm-8">
                     <input class="form-control" asp-for="Input.ConfirmPassword" />
-                    <span asp-validation-from="Input.ConfirmPassword" class="text-danger"></span>
+                    <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
                 </div>
             </div>
 
